# rust-interop-poc

./: .editorconfig  .gitignore  Cargo.toml  build.sh
go/: main.go
node/: main.js
python/: main.py
rust/azure_data_cosmos_shared/: Cargo.toml  build.rs  package-lock.json  package.json  pyproject.toml
rust/azure_data_cosmos_shared/src/: lib.rs
